changed output format for allowing data streaming, fixed issued with finca raiz and metro cuadrado

--- a/.gitignore
+++ b/.gitignore
@@ -106,8 +106,10 @@ venv.bak/
 
 # output generated files
 scrapper/*.json
+scrapper/*.jsonl
 scrapper/*.csv
 scrapper/scrapper/*.json
+scrapper/scrapper/*.jsonl
 scrapper/scrapper/*.csv
 
 # editor settings
