--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,8 @@
+jupyter==1.0.0
+jupyter-client==5.2.3
+jupyter-console==6.0.0
+jupyter-core==4.4.0
+matplotlib==1.5.1
 numpy==1.15.4
 pandas==0.23.4
 pep8>=1.7.1
@@ -5,3 +10,4 @@ pylint>=1.9.3
 Scrapy>=1.5.1
 scikit-learn==0.20.1
 scipy==1.1.0
+seaborn==0.9.0
